Fix scrollbar bug on Windows when using Chrome

--- a/src/styles/Chirp.css
+++ b/src/styles/Chirp.css
@@ -102,7 +102,7 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
-  overflow: auto;
+  overflow: hidden;
   word-wrap: break-word;
 }
 
